--- a/usr/index.html
+++ b/usr/index.html
@@ -202,7 +202,8 @@
 									total += cho2[index];
 								}
 
-								$('#abox').append('<br><div class="total">총 '+total+'회</div>').children().last().slideDown();
+								$('#abox').append('<br><div class="total">총 '+total+'회</div>')
+								$('.total').slideDown();
 							}
 		    			};
 	 				
