--- a/usr/index.html
+++ b/usr/index.html
@@ -39,7 +39,7 @@
 			<div class="fb-like" data-href="fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
 		</div>
 		
-		<div id = 'footer'>1890mah@gmail.com</div>
+		<div id = 'footer'>건의사항<br>1890mah@gmail.com<br><br>copyright 2014 choijiwon</div>
 
 	</div>
 
@@ -195,7 +195,7 @@
 				         		end = true; 
 								rotate();
 								$('#sharebutton').slideDown().animate({'backgroundColor':'#77F'}, 500).animate({'backgroundColor':'#449'}, 500).click( function() { share(); });
-								$('#atext').html('담벼락 불러오기 끝!').delay(3000).slideUp();
+								$('#atext').html('담벼락 불러오기 끝!').delay(2500).slideUp();
 								
 								total=0;
 								for (index in cho2) {
