--- a/usr/index.html
+++ b/usr/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<title>페이스북 초성어 통계기</title>
+		<link rel="shortcut icon" href="/favicon">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="https://code.jquery.com/color/jquery.color-2.1.0.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
