--- a/usr/index.html
+++ b/usr/index.html
@@ -234,7 +234,7 @@
 						}
 						posting+="\n\n총 "+total+"번 사용";
 
-						FB.api('/me/feed', 'post', { message: posting, picture="https://fbcdn-photos-f-a.akamaihd.net/hphotos-ak-prn1/t39.2081/p128x128/851550_576267899118337_264509909_n.png"link:"https://fbcho.herokuapp.com", name:"페이스북 초성어 통계기", description:"당신의 페이스북 담벼락에 있는 글들을 모조리 훔쳐가서 샅샅이 파헤친 뒤 전혀 쓸모없는 정보 한 토막을 제공해 드립니다." }, function(response) {
+						FB.api('/me/feed', 'post', { message: posting, picture:"https://fbcdn-photos-f-a.akamaihd.net/hphotos-ak-prn1/t39.2081/p128x128/851550_576267899118337_264509909_n.png"link:"https://fbcho.herokuapp.com", name:"페이스북 초성어 통계기", description:"당신의 페이스북 담벼락에 있는 글들을 모조리 훔쳐가서 샅샅이 파헤친 뒤 전혀 쓸모없는 정보 한 토막을 제공해 드립니다." }, function(response) {
 
 							if (!response || response.error) {
 								$('#atext').html('에러 발생!!! 이유는 저도 몰라요!').slideDown();
