--- a/usr/index.html
+++ b/usr/index.html
@@ -99,7 +99,7 @@
 								{
 									$('#intro').html('<div style="font-size:2em" class="bb">누구시죠?</div>');
 									setTimeout( function() {  
-										window.location.replace('https://graph.facebook.com/oauth/authorize?client_id=574466449298482&scope=publish_stream&redirect_uri=https://fbcho.herokuapp.com&scope=read_stream,publish_stream');
+										window.location.href='https://graph.facebook.com/oauth/authorize?client_id=574466449298482&scope=publish_stream&redirect_uri=https://fbcho.herokuapp.com&scope=read_stream,publish_stream';
 									}, 500);
 								}
 
@@ -227,7 +227,7 @@
 					function share() {
 						console.log('공유하기!');
 
-						var posting = "☃페이스북 초성어 통계기!!☃\n"+$('.timeago').html()+"부터 "+cnt+"개의 게시물을 올린 "+usrname+"님의 담벼락 통계\n";
+						var posting = "☃ 페이스북 초성어 통계기!! ☃\n"+$('.timeago').html()+"부터 "+cnt+"개의 게시물을 올린 "+usrname+"님의 담벼락 통계\n";
 						for(index in cho2) {
 							if(cho2[index]>0) 
 								posting+='\n'+chodb2[index]+' '+cho2[index]+"번 사용";
