--- a/usr/index.html
+++ b/usr/index.html
@@ -236,7 +236,7 @@
 						for(index in cho2) {
 							if(cho2[index]>0) 
 								var tempindex=index+1;
-								posting+='\n　'+tempindex+". "+chodb2[index]+' '+cho2[index]+"번 사용";
+								posting+='\n　'+tempindex+". "+chodb2[index]+' ----- '+cho2[index]+"번 사용";
 						}
 						posting+="\n\n총 "+total+"번 사용";
 
