--- a/usr/index.html
+++ b/usr/index.html
@@ -37,7 +37,7 @@
 			<div class='button' id='sharebutton'><a>공유하기</a></div>
 			<div id='atext'></div>
 			<div id='abox'></div>
-			<div class="fb-like" data-href="fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+			<div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="flase" data-share="false"></div>
 		</div>
 		
 		<div id = 'footer'>건의사항은 1890mah@gmail.com / Copyright (c) 2014 choijiwon<br><br></div>
