--- a/usr/index.html
+++ b/usr/index.html
@@ -40,7 +40,7 @@
 			<div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div>
 		</div>
 		
-		<div id = 'footer'>건의사항은 1890mah@gmail.com / Copyright (c) 2014 choijiwon<br><br></div>
+		<div id = 'footer'>건의사항·검색어추가는 1890mah@gmail.com / Copyright (c) 2014 choijiwon<br><br></div>
 
 	</div>
 
