--- a/usr/index.html
+++ b/usr/index.html
@@ -29,15 +29,14 @@
 				<div id='board'>
 					<div id='since' class='bb'><time class='timeago'>지금</time></div>부터
 					<br>총 <div id='cnt' class='bb'>0</div>개 글
-					<br><div id='state'>통계 중...―</div>
-				</div>
+					<br><div id='state'>통계 중...―</div></div>
+				<div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="200px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
 			</div>
 			<br>
 			<div class='button' id='startbutton'><a>시작하기</a></div>
 			<div class='button' id='sharebutton'><a>공유하기</a></div>
 			<div id='atext'></div>
 			<div id='abox'></div>
-			<div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="400px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div>
 		</div>
 		
 		<div id = 'footer'>건의사항·검색어추가는 1890mah@gmail.com / Copyright (c) 2014 choijiwon<br><br></div>
