--- a/usr/index.html
+++ b/usr/index.html
@@ -39,7 +39,7 @@
 			<div id='abox'></div>
 		</div>
 		
-		<div id = 'footer'>건의사항·검색어추가는 1890mah@gmail.com / Copyright (c) 2014 choijiwon
+		<div id = 'footer'>건의사항·검색어추가는 1890mah@gmail.com
 			<br><a id="policy" href="#">개인정보처리방침</a><br><br></div>
 
 	</div>
