--- a/usr/policy.html
+++ b/usr/policy.html
@@ -5,11 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-
 <title>개인정보처리방침</title>
 </head>
 <body>
-	<p style="text-align:left;"><span style="font:18pt bold; color:#449">개인정보처리방침<span></p><p><strong>1. 처리하는 개인정보의 항목</strong></p><p><em>'페이스북 초성어 통계기'</em>는 다음의 개인정보 항목을 처리하고 있습니다.</p><p><페이스북 정보></br>- 항목 : 이름, 페이스북 스트림</p></br><p><strong>2. 개인정보의 파기</strong></p><p><em>'페이스북 초성어 통계기'</em>는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차 및 방법은 다음과 같습니다.<p><p>* 이용자가 입력한 정보는 목적(통계) 달성 후 별도의 DB(종이의 경우 별도의 서류)에 옮겨지지 않으며 즉시 파기됩니다.</p></br><p><strong>3. 개인정보 처리방침 변경 </strong></p><p>이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.</p></p>
+	<span style="font:18pt bold; color:#449">개인정보처리방침</span><br><p><strong>1. 처리하는 개인정보의 항목</strong></p><p><em>'페이스북 초성어 통계기'</em>는 다음의 개인정보 항목을 처리하고 있습니다.</p><p><페이스북 정보></br>- 항목 : 이름, 페이스북 스트림의 게시물<br>(Facebook API상의 <em>response.name</em>과 <em>response.data.message</em>)</p></br><p><strong>2. 개인정보의 파기</strong></p><p><em>'페이스북 초성어 통계기'</em>는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차 및 방법은 다음과 같습니다.</p><p>* 이용자가 입력한 정보는 목적(통계) 달성 후 별도의 DB(종이의 경우 별도의 서류)에 옮겨지지 않으며 즉시 파기됩니다.</p></br><p><strong>3. 개인정보 처리방침 변경 </strong></p><p>이 개인정보처리방침은 시행일(2014.2.15)로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.</p>
 </body>
 </html>
