--- a/usr/index.html
+++ b/usr/index.html
@@ -14,6 +14,14 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+				  var js, fjs = d.getElementsByTagName(s)[0];
+				  if (d.getElementById(id)) return;
+				  js = d.createElement(s); js.id = id;
+				  js.src = "https://connect.facebook.net/ko_KR/all.js#xfbml=1&appId=574466449298482";
+				  fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk'));
+		</script>
 		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기 beta</strong></a></div>
 		
 		<div id = "content">
@@ -53,14 +61,6 @@
 			*/
 
 			$(document).ready( function() {
-
-				(function(d, s, id) {
-				  var js, fjs = d.getElementsByTagName(s)[0];
-				  if (d.getElementById(id)) return;
-				  js = d.createElement(s); js.id = id;
-				  js.src = "https://connect.facebook.net/ko_KR/all.js#xfbml=1&appId=574466449298482";
-				  fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
 
 				$('#startbutton').click(function() {
 					start();
