--- a/usr/index.html
+++ b/usr/index.html
@@ -9,6 +9,14 @@
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/timeago"></script>
 
+		<meta property="og:title" content="페이스북 초성어 통계기" />
+	    <meta property="og:type" content="website" />
+	    <meta property="og:image" content="https://fbcdn-photos-f-a.akamaihd.net/hphotos-ak-prn1/t39.2081/p128x128/851550_576267899118337_264509909_n.png" />
+	    <meta property="og:url" content="http://fbcho.herokuapp.com" />
+	    <meta property="og:site_name" content="페이스북 초성어 통계기" />
+	    <meta property="og:description" content="당신의 페이스북 담벼락에 있는 글들을 모조리 훔쳐가서 샅샅이 파헤친 뒤 전혀 쓸모없는 정보 한 토막을 제공해 드립니다." />
+	    <meta property="fb:app_id" content="574466449298482" />
+
    		<link rel="stylesheet" type-"text/css" href="/style" />
   		
 	</head>
