--- a/usr/index.html
+++ b/usr/index.html
@@ -30,7 +30,7 @@
 				  fjs.parentNode.insertBefore(js, fjs);
 				}(document, 'script', 'facebook-jssdk'));
 		</script>
-		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기 beta</strong></a></div>
+		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기</strong></a></div>
 		
 		<div id = "content">
 			<div id="intro">
@@ -39,8 +39,7 @@
 				<div class='bb'>페이스북 초성어 통계기</div>는
 				<br> <div id='userirm'>당신</div>의 스트림 포스팅을 분석해
 				<br>초성어 뿐만 아니라 잡다한 사용 통계를 내주는
-				<br>아무짝에도 쓸모 없는 서비스입니다.
-				<br><strong>※[베타 서비스] 기능 추가중.</strong>
+				<br>매우 유용하기 짝이 없는 서비스입니다.
 				<br><br>
 				<div id='board'>
 					<div id='since' class='bb'><time class='timeago'>지금</time></div>부터
