--- a/usr/index.html
+++ b/usr/index.html
@@ -40,6 +40,7 @@
 				<br> <div id='userirm'>당신</div>의 스트림 포스팅을 분석해
 				<br>초성어 뿐만 아니라 잡다한 사용 통계를 내주는
 				<br>매우 유용하기 짝이 없는 서비스입니다.
+				<br><em>개수 버그 수정됨</em>
 				<br><br>
 				<div id='board'>
 					<div id='since' class='bb'><time class='timeago'>지금</time></div>부터
