--- a/usr/index.html
+++ b/usr/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div id="adddb">
 				<div class="dbline">
-					<div class="dbbox"></div><div class="dbbutton">+</div>
+					<input type="text" class="dbbox" maxlength=15 value="검색어 추가"></div><div class="dbbutton">+</div>
 				</div>
 			</div>
 			<br>
@@ -89,7 +89,7 @@
 
 				$('.dbbutton').click(function() {
 					$('#adddb').append('<div class="dbline">
-					<div class="dbbox"></div><div class="dbbutton">+</div>
+					<input type="text" class="dbbox" maxlength=15 value="검색어 추가"></div><div class="dbbutton">+</div>
 				</div>');
 				});
 
