--- a/usr/index.html
+++ b/usr/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div id="adddb">
 				<div class="dbline">
-					<input type="text" class="dbbox" maxlength=15 value="검색어 추가"></div><div class="dbbutton">+</div>
+					<input type="text" class="dbbox" maxlength=15 value="검색어 추가"></input><div class="dbbutton">+</div>
 				</div>
 			</div>
 			<br>
