--- a/usr/index.html
+++ b/usr/index.html
@@ -89,8 +89,7 @@
 				});
 
 				$('.dbbutton').click(function() {
-					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=15 value="검색어 추가"></div><div class="dbbutton">+</div>
-				</div>');
+					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=15 value="검색어 추가"></input><div class="dbbutton">+</div></div>');
 				});
 
 
