--- a/usr/index.html
+++ b/usr/index.html
@@ -89,6 +89,7 @@
 				});
 
 				$('.dbbutton').click(function() {
+					$('.dbbutton').remove();
 					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>+</a></div></div>');
 				});
 
