--- a/usr/index.html
+++ b/usr/index.html
@@ -51,7 +51,7 @@
 			<br>
 			<div id="adddb">
 				<div class="dbline">
-					<input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>+</a></div>
+					<input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>＋</a></div>
 				</div>
 			</div>
 			<div class='button' id='startbutton'><a>시작하기</a></div>
@@ -90,7 +90,7 @@
 
 				$('.dbbutton').click(function() {
 					$('.dbbutton').remove();
-					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>+</a></div></div>');
+					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>＋</a></div></div>');
 				});
 
 
