--- a/usr/index.html
+++ b/usr/index.html
@@ -90,7 +90,8 @@
 
 				var c = function() {
 					$('.dbbutton').remove();
-					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=16 value="검색어 추가" onfocus="this.value='';"><div class="dbbutton"><a>＋</a></div></div>');
+					$('#adddb').append('<div class="dbline"><input type="text" class="dbbox" maxlength=16 value="검색어 추가"><div class="dbbutton"><a>＋</a></div></div>').children('.input').attr('onfocus', "this.value='';");
+
 					$('.dbbutton').click(c);
 				};
 				$('.dbbutton').click(c);
