--- a/usr/index.html
+++ b/usr/index.html
@@ -152,6 +152,7 @@
 												customdb.push(this);
 											}
 										});
+										console.log(customdb);
 										socket.emit('custom', customdb);
 									}
 
@@ -258,6 +259,7 @@
 							console.log('받음');
 							cho = data.anal;
 							chodb = data.anal2;
+							console.log(chodb);
 							cho2 = cho.slice(0);
 							chodb2 = chodb.slice(0);
 							cho2.sort(function(a,b){return b-a});
