--- a/usr/index.html
+++ b/usr/index.html
@@ -148,6 +148,7 @@
 									
 									if(custum) {
 										$.merge(customdb, $('.dbbox').toArray());
+										console.log($('.dbbox').toArray());
 										console.log(customdb);
 										socket.emit('custom', customdb);
 									}
