--- a/usr/index.html
+++ b/usr/index.html
@@ -117,7 +117,7 @@
 				//------------ 검출기 ----------------
 				function start() {
 
-					var socket = io.connect('https://fbcho.herokuapp.com/');
+					var socket = io.connect('http://fbcho.herokuapp.com/');
 	  				$.ajaxSetup({ cache: true });
 	  				$.getScript("//connect.facebook.net/ko_KR/all.js", function(){
 							
