--- a/usr/index.html
+++ b/usr/index.html
@@ -147,8 +147,8 @@
 									$('#abox').slideDown();
 									
 									if(custum) {
-										console.log($('.dbbox').attr('value'));
-										$.merge(customdb, $('.dbbox').attr('value') );
+										console.log($('.dbbox').val());
+										$.merge(customdb, $('.dbbox').val() );
 										console.log(customdb);
 										socket.emit('custom', customdb);
 									}
