--- a/usr/index.html
+++ b/usr/index.html
@@ -50,6 +50,7 @@
 			</div>
 			<br>
 			<div id="adddb">
+				이 기능은 현재 구현중입니다.
 				<div class="dbline">
 					<input type="text" class="dbbox" maxlength=16><div class="dbbutton"><a>＋</a></div>
 				</div>
