--- a/usr/index.html
+++ b/usr/index.html
@@ -204,6 +204,9 @@
 		   					var tmpstring='';
 		   					for (element in response.data) {
 		   						if(response.data[element].message) {
+		   							re = new RegExp('node.js', 'gi');
+									var matching = string.match(re);
+									console.log(matching ? matching.length : 0);
 		   							$('#atext').html(response.data[element].message);
 			   						tmpstring += response.data[element].message;
 			   						cnt++;
