--- a/usr/index.html
+++ b/usr/index.html
@@ -209,7 +209,7 @@
 		   					}
 		   					for (index in chodb) {
 			   					var re = new RegExp(chodb[index], 'gi');
-								var matching += tmpstring.match(re);
+								var matching = tmpstring.match(re);
 								cho[index] = matching ? matching.length : 0;
 			   				}
 							//socket.emit('toserver', tmpstring);
