--- a/usr/index.html
+++ b/usr/index.html
@@ -40,7 +40,7 @@
 				<br> <div id='userirm'>당신</div>의 스트림 포스팅을 분석해
 				<br>초성어 뿐만 아니라 잡다한 사용 통계를 내주는
 				<br>매우 유용하기 짝이 없는 서비스입니다.
-				<br><em></em>
+				<br><em>공사중</em>
 				<br><br>
 				<div id='board'>
 					<div id='since' class='bb'><time class='timeago'>지금</time></div>부터
@@ -208,9 +208,7 @@
 			   					}
 		   					}
 		   					for (index in chodb) {
-		   						if(new RegExp(chodb[index], 'gi'))
-			   						var re = new RegExp(chodb[index], 'gi');
-			   					else var re = new RegExp(\chodb[index], 'gi');
+		   						var re = new RegExp((chodb[index]), 'gi');
 								var matching = tmpstring.match(re);
 								cho[index] = matching ? matching.length : 0;
 			   				}
