--- a/usr/index.html
+++ b/usr/index.html
@@ -81,10 +81,7 @@
 				var total;
 				var cho = new Array();
 				var cho2;
-				var chodb =
-				[
-					/*'ㄱ', 'ㄲ', 'ㄴ', 'ㄷ', 'ㅂ', 'ㅇ', 'ㅈ', 'ㅉ', 'ㅊ', 'ㅋ', 'ㅌ', 'ㅎ', 'ㄳ', 'ㅄ', 'ㅗ', 'ㅠ', '盧', '?', '!', ';', 'ㅡㅡ', '^^', '^~^', '^0^', '^오^' */
-				];
+				var chodb =	[];
 				var chodb2;
 				var customdb=[];
 				var custum=false;
