--- a/usr/index.html
+++ b/usr/index.html
@@ -40,15 +40,15 @@
 				<br> <div id='userirm'>당신</div>의 스트림 포스팅을 분석해
 				<br>초성이나 기호 등 잡다한 사용 통계를 내주는
 				<br>매우 유용하기 짝이 없는 서비스입니다.
-				<br><em>공사중</em>
-				<br><div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="200px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-				<br>현재 검색어 DB에는 초성어와 일부 한자, 기호 이모티콘 등 총 33개가 기본 등록되어 있으며 바로 아래의 텍스트 입력 폼에 사용자 지정 검색어(12자 이내)를 별도로 추가할 수 있습니다. 통계가 끝나면 결과를 담벼락에 공유할 수 있습니다.
-				<br> 
+				<br>
+				<br><br><div id='desc'>현재 검색어 DB에는 초성어와 일부 한자, 기호 이모티콘 등 총 33개가 기본 등록되어 있으며 바로 아래의 텍스트 입력 폼에 사용자 지정 검색어(12자 이내)를 별도로 추가할 수 있습니다. 통계가 끝나면 결과를 담벼락에 공유할 수 있습니다.</div>
+				<br><br>
 				<div id='board'>
 					<div id='since' class='bb'><time class='timeago'>지금</time></div>부터
 					<br>총 <div id='cnt' class='bb'>0</div>개 글
 					<br><div id='state'>통계 중...―</div>
 				</div>
+				<div class="fb-like" data-href="http://fbcho.herokuapp.com" data-width="200px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
 			</div>
 			<br>
 			<div id="adddb">
