--- a/usr/index.html
+++ b/usr/index.html
@@ -60,7 +60,7 @@
 			<div id='abox'></div>
 		</div>
 		
-		<div id = 'footer'>건의사항·<a id="tt">검색어추가</a>는 1890mah@gmail.com
+		<div id = 'footer'>건의사항·는 1890mah@gmail.com
 			<br><a id="policy" href="#">개인정보처리방침</a><br><br></div>
 
 	</div>
@@ -93,10 +93,6 @@
 
 				$('#policy').click( function() {
 					$('#content').load("/policy").css('text-align', 'left');
-				});
-
-				$('#tt').click( function() {
-					$('#adddb').slideDown();
 				});
 
 				var c = function() {
