fix wrong css ref

--- a/usr/index.html
+++ b/usr/index.html
@@ -17,7 +17,7 @@
 	    <meta property="og:description" content="당신의 페이스북 담벼락에 있는 글들을 모조리 훔쳐가서 샅샅이 파헤친 뒤 전혀 쓸모없는 정보 한 토막을 제공해 드립니다." />
 	    <meta property="fb:app_id" content="574466449298482" />
 
-   		<link rel="stylesheet" type-"text/css" href="/style.css" />
+   	<link rel="stylesheet" type-"text/css" href="/style" />
 
 	</head>
 	<body>
