fix my trivial mistake

--- a/usr/index.html
+++ b/usr/index.html
@@ -244,7 +244,7 @@
 					function share() {
 						console.log('공유하기!');
 
-						var posting = '<(") 페이스북 어휘 통계기!\n"+$('.timeago').html()+"부터 "+cnt+"개의 게시물을 올린 "+usrname+"님의 담벼락 통계\n';
+						var posting = '<(\") 페이스북 어휘 통계기!\n"+$('.timeago').html()+"부터 "+cnt+"개의 게시물을 올린 "+usrname+"님의 담벼락 통계\n';
 						for(index in cho2) {
 							if(cho2[index]>0)
 								posting+='\n　'+chodb2[index]+' ----- '+cho2[index]+"번 사용";
